fix scrolling issue with too big body

--- a/css/GENERAL.css
+++ b/css/GENERAL.css
@@ -15,7 +15,9 @@ body {
     background-position: center;
     font-family: "Arial", Courier, monospace;
     color: white;
-    height: 100vh;
+    height: 87vh;
+    padding: 0;
+    margin: 0;
 }
 
 h1 {
